# CS3203-Team-22-Project

./: .gitignore  README.md  SP_ut22.txt  Sample_source.txt  ref.py  run_tests.py
Team22/Code22/src/integration_testing/: CMakeLists.txt
Team22/Code22/src/integration_testing/src/: TestAllComponentsIntegration.cpp  TestComponentsIntegration.cpp  TestFrontEnd.cpp
Team22/Code22/src/integration_testing/src/QPS/: TestQEvaluator.cpp
Team22/Code22/src/integration_testing/src/SP/: TestSpIntegrationWithPkb.cpp
Team22/Code22/src/integration_testing/src/SP/DesignExtractor/: TestAbstractionExtractor.cpp  TestAssignExtractor.cpp  TestConditionExtractor.cpp  TestDesignExtractor.cpp  TestIfExtractor.cpp  TestNextExtractor.cpp  TestPatternPrefixStringExtractor.cpp  TestProgramExtractor.cpp  TestReadPrintExtractor.cpp  TestStmtlstExtractor.cpp  TestWhileExtractor.cpp
Team22/Code22/src/spa/: CMakeLists.txt
Team22/Code22/src/spa/src/: AbstractionExtractor.cpp  AbstractionExtractor.h  DesignExtractor.cpp  DesignExtractor.h  Entities.cpp  Entities.h  EntityExtractor.cpp  EntityExtractor.h  PKB.h  Parser.cpp  Parser.h  ReadExtractor.cpp  ReadExtractor.h  Result.cpp  Result.h  SPDriver.cpp  SPDriver.h  SPtestFile_DoNotRemove.txt  TNode.cpp  TNode.h  Token.h  Tokenizer.cpp  Tokenizer.h  Utilities.cpp  Utilities.h  VariableExtractor.cpp  VariableExtractor.h  parallel.h
Team22/Code22/src/spa/src/PKB/: PKB.cpp  PKB.h
Team22/Code22/src/spa/src/PKB/Cache/: CacheDatabase.cpp  CacheDatabase.h  CacheManager.cpp  CacheManager.h
Team22/Code22/src/spa/src/PKB/ControlFlowGraph/: BlockToBlock.cpp  BlockToBlock.h  BlockToStatementNumbers.cpp  BlockToStatementNumbers.h  BlocksWithBackPointers.cpp  BlocksWithBackPointers.h  ControlFlowGraph.cpp  ControlFlowGraph.h  ControlFlowGraphDatabase.cpp  ControlFlowGraphDatabase.h  ControlFlowGraphDatabaseFactory.cpp  ControlFlowGraphDatabaseFactory.h  ControlFlowGraphDatabaseManager.cpp  ControlFlowGraphDatabaseManager.h  ControlFlowGraphFactory.cpp  ControlFlowGraphFactory.h  ControlFlowGraphStorageManager.cpp  ControlFlowGraphStorageManager.h  StatementNumberToBlock.cpp  StatementNumberToBlock.h  TopologicallySortedBlockNumbers.cpp  TopologicallySortedBlockNumbers.h  TopologicallySortedElements.cpp  TopologicallySortedElements.h
Team22/Code22/src/spa/src/PKB/DesignAbstractions/: AssignmentModifies.h  DesignAbstraction.cpp  DesignAbstraction.h  DesignAbstractions.h  DesignAbstractionsFactory.cpp  DesignAbstractionsFactory.h  Modifies.cpp  Modifies.h  ModifiesFactory.cpp  ModifiesFactory.h  ProcedureCallModifies.cpp  ProcedureModifies.cpp  ReadModifies.cpp  StatementModifies.cpp
Team22/Code22/src/spa/src/PKB/DesignEntities/: AssignStatement.cpp  AssignStatement.h  AssignmentStatement.cpp  AssignmentStatement.h  CallStatement.cpp  CallStatement.h  Constant.cpp  Constant.h  DesignEntities.h  DesignEntitiesFactory.cpp  DesignEntitiesFactory.h  DesignEntity.cpp  DesignEntity.h  DesignEntityStorage.cpp  DesignEntityStorage.h  DesignEntityStorageFactory.cpp  DesignEntityStorageFactory.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  Procedure.cpp  Procedure.h  ReadStatement.cpp  ReadStatement.h  Statement.cpp  Statement.h  Variable.cpp  Variable.h  WhileStatement.cpp  WhileStatement.h
Team22/Code22/src/spa/src/PKB/Exceptions/: DataNotFoundInCacheException.cpp  DatabaseNotFoundException.cpp  InvalidAPICallException.cpp  InvalidAbstractionTypeException.cpp  InvalidEntityTypeException.cpp  InvalidModifiesAbstractionTypeException.cpp  InvalidPatternTypeException.cpp  InvalidUsesAbstractionTypeException.cpp
Team22/Code22/src/spa/src/PKB/Interfaces/: CacheController.cpp  CacheController.h  CacheInterface.cpp  CacheInterface.h  ControlFlowGraphController.cpp  ControlFlowGraphController.h  ControlFlowGraphInterface.cpp  ControlFlowGraphInterface.h  DesignAbstractionsController.cpp  DesignAbstractionsController.h  DesignAbstractionsInterface.cpp  DesignAbstractionsInterface.h  DesignEntitiesController.cpp  DesignEntitiesController.h  DesignEntitiesInterface.cpp  DesignEntitiesInterface.h  PatternsController.cpp  PatternsController.h  PatternsInterface.cpp  PatternsInterface.h
Team22/Code22/src/spa/src/PKB/Pattern/: Pattern.cpp  Pattern.h  PatternFactory.h  (+9 more)
Team22/Code22/src/spa/src/QPS/: Entities.cpp  Entities.h  Evaluator.cpp  Evaluator.h  Exceptions.h  Expressions.cpp  Expressions.h  Parser.cpp  Parser.h  ResultTable.cpp  ResultTable.h
Team22/Code22/src/spa/src/SP/: AbstractionExtractor.h  DesignExtractor.cpp  EntityExtractor.cpp  EntityExtractor.h  Parser.cpp  Parser.h  ReadExtractor.h  SPDriver.cpp  SPDriver.h  SPtestFile_DoNotRemove.txt  TNode.cpp  TNode.h  Token.h  Tokenizer.cpp  Tokenizer.h  VariableExtractor.h
Team22/Code22/src/unit_testing/: CMakeLists.txt
Team22/Code22/src/unit_testing/src/: TestParser.cpp  TestQParser.cpp
Team22/Code22/src/unit_testing/src/PKB/: TestAssignPattern.cpp  TestPKB.cpp
Team22/Code22/src/unit_testing/src/QPS/: TestAffectsExpression.cpp  TestAttrCondExpression.cpp  TestCallsExpression.cpp  TestFAPSExpression.cpp  TestModifiesExpression.cpp  TestNextExpression.cpp  TestNextExpression.h  TestOptimizer.cpp  TestPatternExpression.cpp  TestQEntities.cpp  TestQEvaluator.cpp  TestQExpressions.cpp  TestQParser.cpp  TestResultTable.cpp  TestSelectExpression.cpp  TestUsesExpression.cpp  TestUtilities.cpp
Team22/Code22/src/unit_testing/src/SP/: TestAST.cpp  TestParser.cpp  TestTNode.cpp  TestTokenizer.cpp
(+580 files in other folders)
