file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_executable(integration_testing ${srcs} "src/TestAllComponentsIntegration.cpp" "src/QPS/TestQEvaluator.cpp" src/SP/TestSpIntegrationWithPkb.cpp)


target_link_libraries(integration_testing spa)
